force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/Form_LCF_Grant_Baseline_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund Grant Management - Baseline Block - 1.0</description>
    <label>Form LCF Grant Baseline Block 1.0</label>
    <nameField>
        <displayFormat>GBB-{00000}</displayFormat>
        <label>Baseline ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCF Grant Baseline Blocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>