force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_commissioner_outcome_payments__c.field-meta.xml
<CustomField>
    <fullName>bb_commissioner_outcome_payments__c</fullName>
    <inlineHelpText>Outcome payments by commissioners excluding LCF</inlineHelpText>
    <label>BB - Commissioner Outcome Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>