force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_commissioner_savings__c.field-meta.xml
<CustomField>
    <fullName>bb_commissioner_savings__c</fullName>
    <description>Page Title:Savings and costs avoided attributable to local commissioners funding the SIB</description>
    <inlineHelpText>Savings</inlineHelpText>
    <label>BB - Commissioner Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>