force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_delivery_cost__c.field-meta.xml
<CustomField>
    <fullName>bb_delivery_cost__c</fullName>
    <description>Page Title:Delivery costs (including management of delivery and collection of data)</description>
    <inlineHelpText>Cost</inlineHelpText>
    <label>BB - Delivery Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>