force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_evaluation_and_learning_cost__c.field-meta.xml
<CustomField>
    <fullName>bb_evaluation_and_learning_cost__c</fullName>
    <description>Page Title:Evaluation and learning cost as a proportion of total cost</description>
    <inlineHelpText>Cost</inlineHelpText>
    <label>BB - Evaluation and Learning Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>