force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_final_lcf_offer__c.field-meta.xml
<CustomField>
    <fullName>bb_final_lcf_offer__c</fullName>
    <inlineHelpText>Final Life Chances Fund offer</inlineHelpText>
    <label>BB - Final LCF Offer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>