force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_investment_cost__c.field-meta.xml
<CustomField>
    <fullName>bb_investment_cost__c</fullName>
    <description>Page Title:Investment cost (return, admin fees and legal fees) as a proportion of total cost</description>
    <inlineHelpText>Investment cost</inlineHelpText>
    <label>BB - Investment Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>