force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_investment_money_multiple__c.field-meta.xml
<CustomField>
    <fullName>bb_investment_money_multiple__c</fullName>
    <defaultValue>"1:XXX"</defaultValue>
    <inlineHelpText>Money multiple on investment - high scenario</inlineHelpText>
    <label>BB - Investment Money Multiple</label>
    <length>5</length>
    <type>Text</type>
</CustomField>