force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_issue_status__c.field-meta.xml
<CustomField>
    <fullName>bb_issue_status__c</fullName>
    <description>Issue status of block created by funding officer</description>
    <inlineHelpText>Issue status of block created by funding officer</inlineHelpText>
    <label>Issue Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grant_Block_Issue_Status</valueSetName>
    </valueSet>
</CustomField>