force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_lcf_outcome_percent__c.field-meta.xml
<CustomField>
    <fullName>bb_lcf_outcome_percent__c</fullName>
    <inlineHelpText>Percentage of outcomes that are Life Chances Fund</inlineHelpText>
    <label>BB - LCF Outcome Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>