force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_management_cost__c.field-meta.xml
<CustomField>
    <fullName>bb_management_cost__c</fullName>
    <description>Page Title:Management cost of SIB as a proportion of total cost</description>
    <inlineHelpText>Management cost</inlineHelpText>
    <label>BB - Management Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>