force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_management_cost_percent__c.field-meta.xml
<CustomField>
    <fullName>bb_management_cost_percent__c</fullName>
    <inlineHelpText>Proportion of cost</inlineHelpText>
    <label>BB - Management Cost %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>