force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_max_outcome_users__c.field-meta.xml
<CustomField>
    <fullName>bb_max_outcome_users__c</fullName>
    <inlineHelpText>Maximum service users achieving at least one outcome</inlineHelpText>
    <label>BB - Max Outcome Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>