force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_max_service_users__c.field-meta.xml
<CustomField>
    <fullName>bb_max_service_users__c</fullName>
    <description>Page Title:Service users</description>
    <inlineHelpText>Maximum planned service user population</inlineHelpText>
    <label>BB - Max Service Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>