force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_number_of_terms__c.field-meta.xml
<CustomField>
    <fullName>bb_number_of_terms__c</fullName>
    <description>Count of additional terms for this baseline block</description>
    <formula>lcf_grant__r.Number_of_Terms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count of additional terms for this baseline block</inlineHelpText>
    <label>BB - Number of Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>