force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_other_funding__c.field-meta.xml
<CustomField>
    <fullName>bb_other_funding__c</fullName>
    <description>Page Title:Other Funding of the SIB</description>
    <inlineHelpText>Funding</inlineHelpText>
    <label>BB - Other Funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>