force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_other_funding_details__c.field-meta.xml
<CustomField>
    <fullName>bb_other_funding_details__c</fullName>
    <inlineHelpText>Other funding details</inlineHelpText>
    <label>BB - Other Funding Details</label>
    <type>TextArea</type>
</CustomField>