force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_other_funding_type__c.field-meta.xml
<CustomField>
    <fullName>bb_other_funding_type__c</fullName>
    <inlineHelpText>Funding type</inlineHelpText>
    <label>BB - Other Funding Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed rate loans</fullName>
            </value>
            <value>
                <fullName>Grants</fullName>
            </value>
            <value>
                <fullName>Block grant</fullName>
            </value>
            <value>
                <fullName>Fee for service</fullName>
            </value>
            <value>
                <fullName>Payment by results</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>