force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_other_local_costs_avoided__c.field-meta.xml
<CustomField>
    <fullName>bb_other_local_costs_avoided__c</fullName>
    <inlineHelpText>Costs avoided</inlineHelpText>
    <label>BB - Other Local Costs Avoided</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>