force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_other_national_savings__c.field-meta.xml
<CustomField>
    <fullName>bb_other_national_savings__c</fullName>
    <description>Page Title:Savings and costs avoided attributable to central government and other national commissioners</description>
    <inlineHelpText>Savings</inlineHelpText>
    <label>BB - Other National Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>