force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_primary_outcome_count__c.field-meta.xml
<CustomField>
    <fullName>bb_primary_outcome_count__c</fullName>
    <description>Count of primary outcomes (should be 1)</description>
    <formula>lcf_grant__r.Primary_Outcome_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count of primary outcomes (should be 1)</inlineHelpText>
    <label>BB - Primary Outcome Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>