force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_return_on_investment__c.field-meta.xml
<CustomField>
    <fullName>bb_return_on_investment__c</fullName>
    <inlineHelpText>Return on investment (IRR) - high scenario</inlineHelpText>
    <label>BB - Return on Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>