force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_section_status__c.field-meta.xml
<CustomField>
    <fullName>bb_section_status__c</fullName>
    <label>BB - Section Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_Section_Status</valueSetName>
    </valueSet>
</CustomField>