force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_sib_end_date__c.field-meta.xml
<CustomField>
    <fullName>bb_sib_end_date__c</fullName>
    <inlineHelpText>End date of Life Chances Fund grant or project (whichever is later)</inlineHelpText>
    <label>BB - SIB End Date</label>
    <type>Date</type>
</CustomField>