force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_sib_launch_date__c.field-meta.xml
<CustomField>
    <fullName>bb_sib_launch_date__c</fullName>
    <inlineHelpText>SIB launch date</inlineHelpText>
    <label>BB - SIB Launch Date</label>
    <type>Date</type>
</CustomField>