force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/bb_start_up_investment__c.field-meta.xml
<CustomField>
    <fullName>bb_start_up_investment__c</fullName>
    <inlineHelpText>Start-up investment</inlineHelpText>
    <label>BB - Start-up Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>