force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>lcf_grant__r.Contact_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>