force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>Form_Complete__c</fullName>
    <formula>ISPICKVAL(bb_section_status__c, &#39;COMPLETE&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is form complete?</inlineHelpText>
    <label>Form Complete</label>
    <type>Checkbox</type>
</CustomField>