force-app/main/default/objects/Form_LCF_Grant_Baseline_1__c/fields/lcf_grant__c.field-meta.xml
<CustomField>
    <fullName>lcf_grant__c</fullName>
    <description>Grant parent record</description>
    <inlineHelpText>Grant parent record</inlineHelpText>
    <label>LCF Grant</label>
    <referenceTo>LCF_Grant__c</referenceTo>
    <relationshipLabel>LCF Grant Baseline Blocks</relationshipLabel>
    <relationshipName>Form_LCF_Grant_Baseline_Blocks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>